# z3-generate-api

./: .gitignore  4.5.0.yml  Main.hs  README.md  package.yaml  z3-generate-api.cabal
api/4.5.0/: api.yml  z3-base-c.cabal
api/4.5.0-20171106/: api.yml
api/4.5.0-20171106/Z3/Base/: C.hsc
api/4.5.0-20171106/Z3/Base/C/: Api.hsc  Fpa.hsc  Optimization.hsc  Rcf.hsc
api/4.5.0/Z3/Base/: C.hsc
api/4.5.0/Z3/Base/C/: Algebraic.hsc  Api.hsc  AstContainers.hsc  Fixedpoint.hsc  Fpa.hsc  Interp.hsc  Optimization.hsc  Polynomial.hsc  Rcf.hsc
api/4.6.0/: api.yml  z3-base-c.cabal
api/4.6.0/Z3/Base/: C.hsc
api/4.6.0/Z3/Base/C/: Api.hsc
